Put Instances in Application, and replace ALL THE THINGS!!!